[package]
categories = ["algorithms", "aerospace::drones", "science::robotics"]
name = "jps"
version = "1.1.0"
description = "Jump Point Search Implementation for Path Finding."
edition = "2021"
exclude = ["target/*", ".gitignore", ".cargo/*", ".vscode/*", "Cargo.lock"]

keywords = ["3d", "jps", "path-finding", "jump-point-search"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/wangxiaochuTHU/jps"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
decomp = ["dep:yakf"]

[dependencies]
yakf = { version = "0.1.12", default-features = false, optional = true }
itertools = { version = "0.10.3", default-features = false, features = [
  "use_std",
] }
priority-queue = "1.2.3"
ordered-float = "3.0.0"
im = { version = "15.1.0", default-features = false }


[dev-dependencies]
rand = "0.8.5"
